--- a/template/template.html
+++ b/template/template.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Meeting Link for Node.js {{MEETING:NAME}} Meeting--></title>
+    <title>Meeting Link for Node.js {{MEETING:NAME}} Meeting</title>
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
   </head>
   <body>
     <h1>Meeting link for {{MEETING:NAME}}</h1>
